--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
         <!-- Title and Subtitle -->
         <div id="titles">
-            <h1>Welcome to the World of Kindred!</h1>
-            <h2>Explore the Magic!</h2>
+            <h1>Rashida's True Crime Hub</h1>
         </div>
         <div id="burger-menu">
             <div id="burger-icon">
