--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Welcome to Kindred! Test</title>
+    <title>Rashida's Hobby Hub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/main.css">
 
@@ -31,6 +31,35 @@
 
 
     <main id="body-wrapper">
+
+        <!--Form to add items to your list is here-->
+<div id="form">
+<h3>Update your to-watch list:</h3>
+<form method="post" enctype="multipart/form-data">
+<div id="item-name" class="form-field">
+<label for="name-field">Name of Media</label>
+</br>
+    <input type="text" name="name"> 
+</div>
+<div class="form-field">
+<label for="type-field">Type</label>
+</br>
+<input type="text" name="type"> 
+</br>
+</div>
+<div class="form-field">
+<label for="url-field">URL</label>
+</br>
+<input type="url" name="url"> 
+</div>
+<button type="submit">Add to List</button>
+
+
+</form>
+
+
+</div>
+
 
         <div class="text-container" id="intro">
             <p>
