--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!--Form to add items to your list is here-->
 <div id="form">
 <h3>Update your to-watch list:</h3>
-<form method="post" enctype="multipart/form-data">
+<form action="assets/list.json" method="post" enctype="multipart/form-data">
 <div id="item-name" class="form-field">
 <label for="name-field">Name of Media</label>
 </br>
@@ -59,6 +59,13 @@
 
 
 </div>
+
+<div id="parse-test">
+    <p id="parse-item">
+
+    </p>
+</div>
+
 
 
         <div class="text-container" id="intro">
@@ -192,9 +199,42 @@
 
     <footer>
         <p>
-            &#169 Spectacular Fiction! 2021
+            &#169 Spectacular Fiction! 2022
         </p>
     </footer>
+
+    <!--
+    <script type="text/javascript" src="/assets/list.json"></script>
+    
+-->
+<script type="text/javascript" src="index.js"></script>
+
+<!--
+<script>
+    displayList(toWatch);
+</script>
+-->
+
 </body>
-<script src="js/main.js"></script>
+
+
+<!--<script src="index.js">-->
+
+    
+
+<!--
+<script>
+const text = '[ "Ford", "BMW", "Audi", "Fiat" ]';
+*/
+
+/*
+
+const myArr = JSON.parse(text);
+document.getElementById("parse-item").innerHTML = myArr[0];
+*/
+
+</script>
+-->
+
+
 </html>
